--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\Administrator\Forkify\dist\css\style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <title>forkify // Search over 1,000,000 recipes</title>
+    <script src="C:\Users\Administrator\Forkify\dist\js\darkmode.js"></script>
+    <script>
+      new Darkmode({
+        top: '32px',
+        right: '32px',
+        time: '0.5s',
+        label: '🌓'
+      }).showWidget(Darkmode);
+    </script>
+
 </head>
 
 <body>
     <div class="container">
         <header class="header">
-            <img src="img/logo.png" alt="Logo" class="header__logo">
+            <img src="C:\Users\Administrator\Forkify\dist\img\logo.png" type="text/png" alt="Logo" class="header__logo">
             <form class="search">
                 <input type="text" class="search__field" placeholder="Search over 1,000,000 recipes...">
                 <button class="btn search__btn">
@@ -437,6 +448,7 @@
     </div>
 
     <!-- <script  src="js/bundle.js"></script> -->
+
 </body>
 
 </html>
