--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
     <title>forkify // Search over 1,000,000 recipes</title>
 </head>
 
-<body>
+<body class="hello buffallow">
+    <div class="mode">
+        <div class="ball"></div>
+    </div>
     <div class="container">
         <header class="header">
             <img src="img/logo.png" alt="Logo" class="header__logo">
@@ -32,7 +35,7 @@
                 </div>
                 <div class="likes__panel">
                     <ul class="likes__list">
-                        <!--
+
                         <li>
                             <a class="likes__link" href="#23456">
                                 <figure class="likes__fig">
@@ -44,7 +47,7 @@
                                 </div>
                             </a>
                         </li>
-                        -->
+
                     </ul>
                 </div>
             </div>
@@ -53,7 +56,7 @@
 
         <div class="results">
             <ul class="results__list">
-                <!--
+
                 <li>
                     <a class="results__link results__link--active" href="#23456">
                         <figure class="results__fig">
@@ -172,11 +175,11 @@
                         </div>
                     </a>
                 </li>
-                -->
+
             </ul>
 
             <div class="results__pages">
-                <!--
+
                 <button class="btn-inline results__btn--prev">
                     <svg class="search__icon">
                         <use href="img/icons.svg#icon-triangle-left"></use>
@@ -189,7 +192,7 @@
                         <use href="img/icons.svg#icon-triangle-right"></use>
                     </svg>
                 </button>
-                -->
+
             </div>
         </div>
 
@@ -197,7 +200,7 @@
 
         <div class="recipe">
 
-            <!--
+
             <figure class="recipe__fig">
                 <img src="img/test-1.jpg" alt="Tomato" class="recipe__img">
                 <h1 class="recipe__title">
@@ -326,7 +329,8 @@
                     This recipe was carefully designed and tested by
                     <span class="recipe__by">The Pioneer Woman</span>. Please check out directions at their website.
                 </p>
-                <a class="btn-small recipe__btn" href="http://thepioneerwoman.com/cooking/pasta-with-tomato-cream-sauce/" target="_blank">
+                <a class="btn-small recipe__btn"
+                    href="http://thepioneerwoman.com/cooking/pasta-with-tomato-cream-sauce/" target="_blank">
                     <span>Directions</span>
                     <svg class="search__icon">
                         <use href="img/icons.svg#icon-triangle-right"></use>
@@ -334,7 +338,7 @@
 
                 </a>
             </div>
-            -->
+
         </div>
 
 
@@ -346,7 +350,7 @@
 
             <ul class="shopping__list">
 
-                <!--
+
                 <li class="shopping__item">
                     <div class="shopping__count">
                         <input type="number" value="500" step="100">
@@ -425,7 +429,7 @@
                         </svg>
                     </button>
                 </li>
-                -->
+
             </ul>
 
             <div class="copyright">
@@ -436,7 +440,21 @@
         </div>
     </div>
 
-    <!-- <script  src="js/bundle.js"></script> -->
+    <!-- <script src="js/bundle.js"></script> -->
 </body>
+
+<script>
+    const mode = document.querySelector(".mode");
+    const logo = document.querySelector('.header__logo');
+    console.log(mode);
+    mode.addEventListener('click', () => {
+        console.log("Clicked");
+        document.documentElement.classList.toggle('dark')
+        if (document.documentElement.classList.contains('dark')) {
+            logo.src = logo.src.replace('logo', 'logo-dark');
+            console.log(logo);
+        } else logo.src = logo.src.replace('logo-dark', 'logo');
+    })
+</script>
 
 </html>
